--- a/index.html
+++ b/index.html
@@ -5,23 +5,11 @@
   <title>Reserva Grass Deportivo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Enlace al archivo de estilos externos -->
+  <link rel="stylesheet" href="styles.css">
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <style>
-    body {
-      background-color: #f5f9ff;
-    }
-    .horario-btn {
-      min-width: 100px;
-      margin: 2px;
-    }
-    .reservado {
-      background-color: #dc3545 !important;
-      color: white;
-      pointer-events: none;
-    }
-  </style>
 </head>
 <body>
   <div class="container mt-5">
@@ -29,7 +17,7 @@
     <div id="horario" class="table-responsive"></div>
   </div>
 
-  <!-- Firebase y Lógica -->
+  <!-- Firebase y lógica -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
     import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
