--- a/login.html
+++ b/login.html
@@ -34,6 +34,18 @@
     .btn-primary:hover {
       background-color: #1e4b1e;
     }
+    .crear-cuenta {
+      text-align: center;
+      margin-top: 1rem;
+      font-size: 0.9rem;
+    }
+    .crear-cuenta a {
+      color: #2c6e2c;
+      text-decoration: none;
+    }
+    .crear-cuenta a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -50,6 +62,9 @@
       <input type="password" class="form-control" id="password" required placeholder="Ingrese su contraseña">
     </div>
     <button type="submit" class="btn btn-primary w-100">INICIAR SESIÓN</button>
+    <div class="crear-cuenta">
+      ¿No tienes una cuenta? <a href="register.html">Crear nueva cuenta</a>
+    </div>
   </form>
 </div>
 
@@ -61,11 +76,10 @@
     const email = document.getElementById("email").value.trim();
     const password = document.getElementById("password").value.trim();
 
-    // Validación simple
-    if (email === "yeremy456" && password === "123456789") {
+    if (email === "administrador" && password === "123456789") {
       alert("Bienvenido Yeremy 👋");
-      localStorage.setItem("isLoggedIn", "true"); // Guardar sesión
-      window.location.href = "index.html"; // Redirige a la página principal
+      localStorage.setItem("isLoggedIn", "true");
+      window.location.href = "index.html";
     } else {
       alert("Usuario o contraseña incorrectos");
     }
