--- a/login.html
+++ b/login.html
@@ -2,89 +2,149 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login | Grass-Hepsu</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <title>Reserva Grass Deportivo Grass-Hepsu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+  <!-- ⚠️ Verificación de sesión antes de mostrar contenido -->
+  <script>
+    if (localStorage.getItem("isLoggedIn") !== "true") {
+      window.location.href = "login.html"; // Redirige si no ha iniciado sesión
+    }
+  </script>
+
   <style>
     body {
-      background: linear-gradient(135deg, #2c6e2c, #4caf50);
+      background: linear-gradient(135deg, #2c6e2c 0%, #4caf50 100%);
+      color: #fff;
+      min-height: 100vh;
       display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      color: #003300;
+      flex-direction: column;
+      background-image: radial-gradient(rgba(255,255,255,0.05) 1px, transparent 1px);
+      background-size: 20px 20px;
     }
-    .login-box {
-      background-color: #ffffff;
+    header {
+      padding: 1.5rem 2rem;
+      background-color: rgba(0, 50, 0, 0.7);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+      border-radius: 0 0 10px 10px;
+    }
+    header h1 {
+      font-weight: 700;
+      font-size: 2rem;
+      letter-spacing: 2px;
+      margin: 0;
+      color: #d0f0c0;
+      text-shadow: 1px 1px 2px #003300;
+    }
+    main {
+      flex-grow: 1;
       padding: 2rem;
+      background-color: #e6f2e6;
+      color: #003300;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-      width: 100%;
-      max-width: 400px;
+      max-width: 1100px;
+      margin: 2rem auto;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
     }
-    .login-box h2 {
+    .subtitle {
       text-align: center;
       margin-bottom: 1.5rem;
-      color: #2c6e2c;
+      font-weight: 500;
+      font-size: 1.2rem;
+      color: #2e7d32;
     }
-    .btn-primary {
-      background-color: #2c6e2c;
-      border: none;
+    table.table {
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
-    .btn-primary:hover {
-      background-color: #1e4b1e;
+    .btn.horario-btn {
+      min-width: 100px;
+      font-weight: 600;
+      transition: transform 0.2s ease;
     }
-    .crear-cuenta {
+    .btn.horario-btn:hover:not(:disabled) {
+      transform: scale(1.05);
+    }
+    footer {
       text-align: center;
-      margin-top: 1rem;
+      padding: 1rem;
       font-size: 0.9rem;
-    }
-    .crear-cuenta a {
-      color: #2c6e2c;
-      text-decoration: none;
-    }
-    .crear-cuenta a:hover {
-      text-decoration: underline;
+      color: #d0f0c0;
+      background: rgba(0, 50, 0, 0.7);
+      margin-top: auto;
+      border-radius: 10px 10px 0 0;
     }
   </style>
 </head>
 <body>
 
-<div class="login-box">
-  <h2>SISTEMA GRASS-HEPSU</h2>
-  <form id="loginForm">
-    <div class="mb-3">
-      <label for="email" class="form-label">Correo Electrónico</label>
-      <input type="text" class="form-control" id="email" required placeholder="Ej: yeremy456">
-    </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">Contraseña</label>
-      <input type="password" class="form-control" id="password" required placeholder="Ingrese su contraseña">
-    </div>
-    <button type="submit" class="btn btn-primary w-100">INICIAR SESIÓN</button>
-    <div class="crear-cuenta">
-      ¿No tienes una cuenta? <a href="register.html">Crear nueva cuenta</a>
-    </div>
-  </form>
-</div>
+<header>
+  <h1>Reserva Grass Deportivo Grass-Hepsu</h1>
+</header>
+<main>
+  <h2 class="text-center mb-3">Reservas del Grass Deportivo</h2>
+  <p class="subtitle">Elige tu día y hora para reservar la cancha. ¡Fácil y rápido!</p>
+  <div id="horario" class="table-responsive"></div>
+</main>
+<footer>
+  &copy; 2025 Reserva Grass Deportivo | Contacto: info@grassdeportivo.com
+</footer>
 
-<script>
-  const form = document.getElementById("loginForm");
-  form.addEventListener("submit", function(e) {
-    e.preventDefault();
+<!-- Firebase y lógica -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+  import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
 
-    const email = document.getElementById("email").value.trim();
-    const password = document.getElementById("password").value.trim();
+  const firebaseConfig = {
+    apiKey: "TU_API_KEY",
+    authDomain: "TU_PROJECT.firebaseapp.com",
+    projectId: "TU_PROJECT",
+    storageBucket: "TU_PROJECT.appspot.com",
+    messagingSenderId: "",
+    appId: ""
+  };
 
-    if (email === "administrador" && password === "123456789") {
-      alert("Bienvenido Yeremy 👋");
-      localStorage.setItem("isLoggedIn", "true");
-      window.location.href = "index.html";
-    } else {
-      alert("Usuario o contraseña incorrectos");
-    }
-  });
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  const dias = ['Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado', 'Domingo'];
+  const horas = Array.from({length: 15}, (_, i) => `${i + 9}:00`);
+  const horarioDiv = document.getElementById('horario');
+
+  async function renderHorario() {
+    const reservasSnap = await getDocs(collection(db, "reservas"));
+    const reservas = {};
+    reservasSnap.forEach(doc => {
+      const data = doc.data();
+      reservas[`${data.dia}_${data.hora}`] = true;
+    });
+
+    let html = '<table class="table table-bordered text-center"><thead class="table-success"><tr><th>Hora</th>';
+    dias.forEach(d => html += `<th>${d}</th>`);
+    html += '</tr></thead><tbody>';
+
+    horas.forEach(hora => {
+      html += `<tr><th>${hora}</th>`;
+      dias.forEach(dia => {
+        const key = `${dia}_${hora}`;
+        const reservado = reservas[key];
+        html += `<td><button class="btn btn-sm horario-btn ${reservado ? 'btn-danger reservado' : 'btn-success'}"
+                  ${reservado ? 'disabled' : ''}
+                  onclick="window.location.href='pago.html?dia=${encodeURIComponent(dia)}&hora=${encodeURIComponent(hora)}'">
+                  ${reservado ? 'Reservado' : 'Reservar'}</button></td>`;
+      });
+      html += '</tr>';
+    });
+
+    html += '</tbody></table>';
+    horarioDiv.innerHTML = html;
+  }
+
+  renderHorario();
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
