--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!-- ⚠️ Verificación de sesión antes de mostrar contenido -->
+  <!-- Verificación de sesión -->
   <script>
     if (localStorage.getItem("isLoggedIn") !== "true") {
-      window.location.href = "login.html"; // Redirige si no ha iniciado sesión
+      window.location.href = "login.html";
     }
   </script>
 
@@ -24,21 +24,28 @@
       background-size: 20px 20px;
     }
     header {
-      padding: 1.5rem 2rem;
-      background-color: rgba(0, 50, 0, 0.7);
+      background-color: rgba(0, 50, 0, 0.9);
       box-shadow: 0 2px 10px rgba(0,0,0,0.3);
       border-radius: 0 0 10px 10px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      padding: 1rem 2rem;
     }
-    header h1 {
-      font-weight: 700;
-      font-size: 2rem;
-      letter-spacing: 2px;
-      margin: 0;
-      color: #d0f0c0;
+    .navbar-brand {
+      font-weight: bold;
+      color: #d0f0c0 !important;
       text-shadow: 1px 1px 2px #003300;
+    }
+    .navbar-nav .nav-link {
+      color: #d0f0c0 !important;
+      font-weight: 500;
+    }
+    .navbar-nav .nav-link:hover {
+      text-decoration: underline;
+    }
+    .btn-logout {
+      background-color: #ffc107;
+      border: none;
+      color: #003300;
+      font-weight: 600;
     }
     main {
       flex-grow: 1;
@@ -56,11 +63,6 @@
       font-weight: 500;
       font-size: 1.2rem;
       color: #2e7d32;
-    }
-    table.table {
-      border-radius: 8px;
-      overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
     .btn.horario-btn {
       min-width: 100px;
@@ -83,9 +85,23 @@
 </head>
 <body>
 
+<!-- Menú de navegación -->
 <header>
-  <h1>Reserva Grass Deportivo Grass-Hepsu</h1>
-  <button id="logoutBtn" class="btn btn-warning">Cerrar Sesión</button>
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <a class="navbar-brand" href="#">Grass-Hepsu</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="#">Alquiler de Canchas</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Ventas</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Transacción</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Reportes</a></li>
+      </ul>
+      <button id="logoutBtn" class="btn btn-logout">Cerrar Sesión</button>
+    </div>
+  </nav>
 </header>
 
 <main>
